# easy-log

./: CMakeLists.txt  README.md  log4cxx.properties
app/: CMakeCache.txt  Makefile  cmake_install.cmake  config.h  esay-log  log-demo  test.cpp
inc/demo/: LoggerWarp.h  main.h
src/: LoggerWarp.cpp
